Fixed compilation with GCC 4.8.

GCC 4.8 does not allow aggregate initialization for type with deleted
constructor, see https://gcc.gnu.org/bugzilla/show_bug.cgi?id=52707.

Change-Id: I78bda7b4fee1e60538c90012e8640a58d3c00fc3